Fix sticky sidebar wrapping to bottom of document

--- a/assets/_scss/_utilities.scss
+++ b/assets/_scss/_utilities.scss
@@ -360,6 +360,9 @@ body:hover .visually-hidden button {
   }
 }
 
+.menu-sticky-wrap {
+  clear: none !important;
+}
 
 /*
    Wells
